= RSpec Changelog

== Version 0.9.4
* Reactivated --timeout, which had mysteriously been deactivated in a recent release.
* Fixed [#10669] Kernel#describe override does not cover Kernel#context
* Applied [#10636] Added spec for OptionParser in Runner (Patch from Scott Taylor)
* Added [#10516] should_include should be able to accept multiple items
* Applied [#10631] redirect_to matcher doesn't respect request.host (Patch from Tim Lucas)
* Each formatter now flushes their own IO. This is to avoid buffering of output.
* Fixed [#10670] IVarProxy#delete raises exception when instance variable does not exist

== Version 0.9.3
This is a bugfix release.

* Fixed [#10594] Failing Custom Matcher show NAME NOT GENERATED description
* describe(SomeType, "#message") will not add a space: "SomeType#message" (likewise for '.')
* describe(SomeType, "message") will have a decription with a space: "SomeType message"
* Applied [#10566] prepend_before and prepend_after callbacks
* Applied [#10567] Call setup and teardown using before and after callbacks

== Version 0.9.2
This is a quick maintenance release. 

* Added some website love
* Fixed [#10542] reverse predicate matcher syntax
* Added a spec:translate Rake task to make 0.9 translation easier with Spec:Rails
* Better translation of should_redirect_to
* Fixed --colour support for Windows. This is a regression that was introduced in 0.9.1
* Applied [#10460] Make SpecRunner easier to instantiate without using commandline args

== Version 0.9.1

This release introduces #describe and #it (aliased as #context and #specify for
backwards compatibility). This allows you to express specs like this:

  describe SomeClass do # Creates a Behaviour
    it "should do something" do # Creates an Example
    end
  end

The command line features four new options that give you more control over what specs
are being run and in what order. This can be used to verify that your specs are