@@ -22,3 +22,5 @@ examples/watir/Rakefile
 examples/watir/README.txt
 examples/watir/spec/google/find_rspecs_homepage_spec.rb
 examples/watir/spec/spec_helper.rb
+spec/spec_helper.rb
+spec/spec/ui/watir/matchers_spec.rb
