@@ -46,3 +46,7 @@ hoe = Hoe.new(GEM_NAME, VERS) do |p|
   #p.extra_deps     - An array of rubygem dependencies.
   #p.spec_extras    - A hash of extra values to set in the gemspec.
 end
+
+$LOAD_PATH.unshift File.dirname(__FILE__) + '/../rspec/lib'
+require 'spec/rake/spectask'
+Spec::Rake::SpecTask.new
