@@ -1,0 +1,2 @@
+$LOAD_PATH.unshift(File.dirname(__FILE__) + '/../lib')
+require 'spec/ui'
