@@ -1,6 +1,10 @@
 = RSpec Changelog
 
 == Version 0.9.4
+This release introduces massive improvements to Spec::Ui - the user interface functional testing
+extension to RSpec. There are also some minor bug fixes to the RSpec core.
+
+* Massive improvements to Spec::Ui. Complete support for all Watir's ie.xxx(how, what) methods. Inline screenshots and HTML.
 * Reactivated --timeout, which had mysteriously been deactivated in a recent release.
 * Fixed [#10669] Kernel#describe override does not cover Kernel#context
 * Applied [#10636] Added spec for OptionParser in Runner (Patch from Scott Taylor)
